<resources>
    <string name="app_name">Call-center</string>
    <string name="err_msg_login">Введите логин</string>
    <string name="err_msg_password">Введите пароль</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="ok">OK</string>
    <string name="you_are_already_registered">Вы уже прошли регистрацию</string>
    <string name="no_internet_connection">Нет подключения к интернету!</string>
    <string name="failed_to_register">Не удалось зарегистрироваться</string>
    <string name="internet_connection_is_restored">Интернет соединение восстановлено</string>
    <string name="lost_internet_connection">Интернет соединение потеряно</string>
    <string name="registration_completed_successfully">Регистрация прошла успешно</string>
    <string name="incorrect_login">Неверный логин</string>
    <string name="incorrect_password">Неверный пароль</string>
    <string name="sign_out">Выход</string>
    <string name="line_number">Номер линии</string>
</resources>
